Ajustes CSS finais e endpoints

--- a/app/views/historico_acao/show.html.erb
+++ b/app/views/historico_acao/show.html.erb
@@ -1,4 +1,4 @@
-<!-- app/views/historico_acaos/show.html.erb -->
+<!-- app/views/historico_acao/show.html.erb -->
 <h1>Detalhes do Histórico de Ação</h1>
 
 <p>
@@ -12,4 +12,4 @@
 </p>
 
 <%= link_to 'Edit', edit_historico_acao_path(@historico_acao) %> |
-<%= link_to 'Back', historico_acaos_path %>
+<%= link_to 'Back', historico_acao_path %>
