--- a/app/views/premios_categorias/show.html.erb
+++ b/app/views/premios_categorias/show.html.erb
@@ -1,4 +1,4 @@
-<!-- app/views/premio_categorias/show.html.erb -->
+<!-- app/views/premios_categorias/show.html.erb -->
 <h1>Detalhes do Prêmio Categoria</h1>
 
 <p>
@@ -12,4 +12,4 @@
 </p>
 
 <%= link_to 'Edit', edit_premio_categoria_path(@premio_categoria) %> |
-<%= link_to 'Back', premio_categorias_path %>
+<%= link_to 'Back', premios_categorias_path %>
