--- a/app/views/acaos/index.html.erb
+++ b/app/views/acaos/index.html.erb
@@ -1,12 +1,11 @@
 <!-- app/views/acaos/index.html.erb -->
-<h1>Ações</h1>
-
+<h1 class="text-2xl font-bold mb-4">Ações</h1>
 <table>
   <thead>
     <tr>
       <th>Descrição</th>
       <th>Pontos Obtidos</th>
-      <th colspan="3"></th>
+      <th colspan="3">Ações</th>
     </tr>
   </thead>
   <tbody>
@@ -14,12 +13,13 @@
       <tr>
         <td><%= acao.descricao %></td>
         <td><%= acao.pontos_obtidos %></td>
-        <td><%= link_to 'Show', acao %></td>
-        <td><%= link_to 'Edit', edit_acao_path(acao) %></td>
-        <td><%= link_to 'Destroy', acao, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', acao %>
+          <%= link_to 'Edit', edit_acao_path(acao) %>
+          <%= link_to 'Destroy', acao, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to 'New Ação', new_acao_path %>
+<%= link_to 'New Ação', new_acao_path, class: "btn btn-new mt-4 inline-block" %>
