--- a/app/views/historico_acao/edit.html.erb
+++ b/app/views/historico_acao/edit.html.erb
@@ -1,6 +1,6 @@
-<!-- app/views/historico_acaos/edit.html.erb -->
+<!-- app/views/historico_acao/edit.html.erb -->
 <h1>Editar Histórico de Ação</h1>
 
 <%= render 'form', historico_acao: @historico_acao %>
 
-<%= link_to 'Back', historico_acaos_path %>
+<%= link_to 'Back', historico_acao_path %>
