--- a/app/views/pessoas/new.html.erb
+++ b/app/views/pessoas/new.html.erb
@@ -1,22 +1,25 @@
-<!-- app/views/pessoas/new.html.erb -->
-<h1>Nova Pessoa</h1>
+<%= form_with(model: @pessoa, local: true, class: "space-y-4") do |f| %>
+  <div>
+    <label class="block text-gray-700 font-medium">Nome</label>
+    <%= f.text_field :nome, class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm" %>
+  </div>
 
-<%= render 'form', pessoa: @pessoa %>
+  <div>
+    <label class="block text-gray-700 font-medium">Email</label>
+    <%= f.email_field :email, class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm" %>
+  </div>
 
-<%= link_to 'Voltar', pessoas_path %>
-<p style="color: green"><%= notice %></p>
+  <div>
+    <label class="block text-gray-700 font-medium">Data de Nascimento</label>
+    <%= f.date_field :data_nascimento, class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm" %>
+  </div>
 
-<% content_for :title, "Local acaos" %>
+  <div>
+    <label class="block text-gray-700 font-medium">Sexo</label>
+    <%= f.select :sexo, [['Masculino', 'M'], ['Feminino', 'F']], {}, class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm" %>
+  </div>
 
-<h1>Local acaos</h1>
-
-<div id="local_acaos">
-  <% @local_acaos.each do |local_acao| %>
-    <%= render local_acao %>
-    <p>
-      <%= link_to "Show this local acao", local_acao %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New local acao", new_local_acao_path %>
+  <div class="flex justify-end">
+    <%= f.submit "Create Pessoa", class: "px-6 py-2 bg-green-600 text-white rounded-lg font-semibold shadow-md hover:bg-green-700 transition duration-300" %>
+  </div>
+<% end %>
