--- a/app/views/premios/index.html.erb
+++ b/app/views/premios/index.html.erb
@@ -1,12 +1,11 @@
 <!-- app/views/premios/index.html.erb -->
-<h1>Prêmios</h1>
-
+<h1 class="text-2xl font-bold mb-4">Prêmios</h1>
 <table>
   <thead>
     <tr>
       <th>Nome</th>
       <th>Custo Pontos</th>
-      <th colspan="3"></th>
+      <th colspan="3">Ações</th>
     </tr>
   </thead>
   <tbody>
@@ -14,12 +13,11 @@
       <tr>
         <td><%= premio.nome %></td>
         <td><%= premio.custo_pontos %></td>
-        <td><%= link_to 'Show', premio %></td>
-        <td><%= link_to 'Edit', edit_premio_path(premio) %></td>
-        <td><%= link_to 'Destroy', premio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', premio %>
+          <%= link_to 'Edit', edit_premio_path(premio) %>
+          <%= link_to 'Destroy', premio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to 'New Prêmio', new_premio_path %>
+<%= link_to 'New Prêmio', new_premio_path, class: "btn btn-new mt-4 inline-block" %>
